button flickering issue resolved

--- a/src/app/components/common/carousel/carousel.component.css
+++ b/src/app/components/common/carousel/carousel.component.css
@@ -29,6 +29,7 @@
   color: black;
   display: none;
   padding-top: 6px;
+  user-select: none;
 }
 
 .prev {
